# keeloq-python

./: .gitignore  CITATION.cff  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_attack.py  bench_neural.py  matrix.toml  neural_matrix.toml
checkpoints/: README.md
docs/phase3b-results/: ambition_outcome.md  benchmark.csv  benchmark.md  delta_search.md  eval_d64.json  eval_d96.json  horizon_probe.md  horizon_probe_fine.md  train_d64.json  train_d96.json  v2_experiment.md
docs/superpowers/plans/: 2026-04-22-phase1-foundation-plan.md  2026-04-22-phase3b-neural-cryptanalysis-plan.md
docs/superpowers/specs/: 2026-04-22-phase1-foundation-design.md  2026-04-22-phase3b-neural-cryptanalysis-design.md
scripts/: horizon_probe.py  horizon_probe_fine.py  v2_experiment.py
src/keeloq/: __init__.py  _types.py  anf.py  attack.py  cipher.py  cli.py  errors.py  gpu_cipher.py
src/keeloq/encoders/: __init__.py  cnf.py  xor_aware.py
src/keeloq/neural/: __init__.py  cli_neural.py  data.py  differences.py  distinguisher.py  distinguisher_v2.py  evaluation.py  hybrid.py  key_recovery.py
src/keeloq/solvers/: __init__.py  cryptominisat.py  dimacs_subprocess.py
tests/: compat_helpers.py  conftest.py  test_anf.py  test_attack.py  test_cipher.py  test_cli.py  test_compat.py  test_encoders_agree.py  test_encoders_cnf.py  test_encoders_xor.py  test_gpu_cipher.py  test_neural_cli.py  test_neural_data.py  test_neural_differences.py  test_neural_distinguisher.py  test_neural_e2e_64r.py  test_neural_e2e_toy.py  test_neural_evaluation.py  test_neural_hybrid.py  test_neural_key_recovery.py  test_solvers.py  test_types.py
