[project]
name = "keeloq"
version = "0.1.0"
description = "2026 modernization of the KeeLoq algebraic/SAT cryptanalysis pipeline"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Cahlen Humphreys"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.5",
    "pycryptosat>=5.11",
    "typer[all]>=0.12",
    "pydantic>=2.7",
    "structlog>=24.1",
]

[project.scripts]
keeloq = "keeloq.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keeloq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --timeout=120"
markers = [
    "gpu: requires CUDA and an NVIDIA GPU",
    "legacy: requires python2 interpreter on PATH",
    "solver_kissat: requires the kissat binary on PATH",
    "solver_minisat: requires the minisat binary on PATH",
    "slow: end-to-end attack tests; excluded from -m 'not slow' runs",
]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/keeloq"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
